@@ -1,3 +1,9 @@
+2009-05-18  Christopher Faylor  <me+cygwin@cgf.cx>
+
+	* mount.cc (mount_info::got_usr_bin): Mark as NO_COPY.
+	(mount_info::got_usr_lib): Ditto.
+	(mount_info::root_idx): Ditto.
+
 2009-05-14  Corinna Vinschen  <corinna@vinschen.de>
 
 	* wchar.h (sys_mbstowcs): Add missing __stdcall attribute.
